[gd_scene load_steps=2 format=3 uid="uid://dvtsmtjsdmvk2"]

[ext_resource type="Script" uid="uid://dmkkyyma5ekox" path="res://scripts/Statistics.gd" id="1_cr0jn"]

[node name="Statistics" type="Node"]

[node name="Statistics" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cr0jn")

[node name="Background" type="ColorRect" parent="Statistics"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="MainPanel" type="Panel" parent="Statistics"]
custom_minimum_size = Vector2(900, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -300.0
offset_right = 450.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Statistics/MainPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 32
text = "GAME STATISTICS"
horizontal_alignment = 1

[node name="CategoryTabs" type="HBoxContainer" parent="Statistics/MainPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -340.0
offset_top = 70.0
offset_right = 340.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Statistics/MainPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -250.0
offset_right = 420.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 1

[node name="StatsContainer" type="VBoxContainer" parent="Statistics/MainPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="BackButton" type="Button" parent="Statistics/MainPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = -20.0
grow_vertical = 0
text = "BACK"
